# high-level-CBIR

./: .gitattributes  .gitignore  HistogramComparison.cpp  SkinColorDetector.cpp  VidCapture.cpp
3D Vision/Code/: CMakeLists.txt  SimpleFreenect.cpp  SimpleFreenect.hpp  reconstruct.cpp  stereoParams.xml  viewcloud.cpp
project/proj1/: indexing.py  one_shot.py  proj.py  salience.py  search.py  text_recognizer.py  utils.py
src/: yolov3-tiny_final.weights
tutorial_assigments/3D Vision/Code/: 3Dreconstruction.cpp  disparityMap.cpp  pcl_io.cpp  stereoCalibration.cpp  stereoParams.xml  viewFreenect.cpp
tutorial_assigments/StereoVision/: CMakeLists.txt  ImageRectification.cpp  LensDistortion.cpp  chessboard.cpp  chessboard1.cpp  stereoCalibration.cpp
tutorial_assigments/StereoVision/cameraCalibration/: CMakeLists.txt  chessboard.cpp
tutorial_assigments/assigment_1/code/changingContrastBright/: CMakeCache.txt  Makefile  changingContrastBright  cmake_install.cmake
tutorial_assigments/assigment_1/code/changingContrastBright_2/: CMakeCache.txt  CMakeLists.txt  Makefile  changingContrastBright  cmake_install.cmake
tutorial_assigments/assigment_1/code/operations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  operations  operations.cpp
tutorial_assigments/assigment_1/code/scanImages/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  scan
tutorial_assigments/assigment_1/code/teste/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  teste  teste.cpp
tutorial_assigments/assigment_2/code/exer1/: Makefile  (+5 more)
tutorial_assigments/assigment_4/cameraCalibration/: CMakeCache.txt  CamParams.xml  Makefile  calib  chessboard.cpp  cmake_install.cmake
tutorial_assigments/assigment_4/externalCalibration/: CMakeCache.txt  Makefile  calib  chessboard.cpp  cmake_install.cmake
tutorial_assigments/assigment_4/webCamCalibration/: CMakeCache.txt  Makefile  calib  chessboard.cpp  cmake_install.cmake
tutorial_assigments/assigment_4/webcamCalibrationRealTime/: CMakeCache.txt  CMakeLists.txt  Makefile  chessboard.cpp  cmake_install.cmake  webcamCalibration
tutorial_assigments/assigment_5/StereoVision/: CMakeLists.txt  calib  chessboard.cpp  chessboard1.cpp
tutorial_assigments/assigment_6/Code/: CMakeLists.txt  SimpleFreenect.hpp  viewcloud.cpp
tutorial_assigments/lecture_09/: CMakeLists.txt  lucasKanade.cpp  lucasKanade.py
tutorial_assigments/lecture_09/exer2/: CMakeLists.txt  calib  motionDetetion.cpp
tutorial_assigments/lecture_09/exer3/: CMakeLists.txt  calib  motionDetetionOpenCV.cpp
(+45 files in other folders)
